<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Encoder_Control_Typ" Id="{ae91ea0e-9e91-4b72-b869-7137aaec9236}">
    <Declaration><![CDATA[TYPE Encoder_Control_Typ :
STRUCT
	SetCounterCmd AT %Q* 	: BOOL;
	SetCounterValue AT %Q* 	: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>