<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_cycle_Mon_typ" Id="{ca2dad90-fcb3-0871-2558-073e1580b469}">
    <Declaration><![CDATA[TYPE Basic_cycle_Mon_typ :
	STRUCT
		StepNo 				: DINT; (* current cycle step *)
		PrevStepNo 			: DINT; (* previous cycle step *)
		SubStepNo 			: DINT; (* current cycle step *)
		StepMessage 		: STRING[100]; (* Inside the Cycle *)
		SubStepMessage 		: STRING[100]; (* Inside the Cycle *)
		LastStep 			: DINT;
		Error_Text 			: STRING[100];
		External_Error_Text : STRING[100];
		Visu_StepNo 		: DINT;
		LastCycleTime 		: TIME;
		CycleTime 			: TIME;
		Step_TimeOut 		: TIME;
		SubStep_TimeOut 	: TIME;
		ExternalLogText		: STRING[100];
		ExternalLogParam1	: DINT;
		
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>